src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Category__c</fullName>
        <label>Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Activity Detail</label>
        <referenceTo>Activity_Detail__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_SubType__c</fullName>
        <label>Activity Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>Operational Due Diligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transition Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Senior Leadership Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Introduction/Strategy Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Finals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio/Strategy Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DB Trends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Trends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESG Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Macro Market Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partner Event/Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Event</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Activity_Sub_Type__c</fullName>
        <label>Activity Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>MFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Charitable Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Due Diligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Request Response?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational/Administrative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portfolio Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Final Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transition Meeting</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Activity_Type_for_Instit__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Portfolio/Strategy Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Introduction/Strategy Introduction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Finals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thought Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Senior Leadership Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Due Diligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transition Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Partner Event/Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thought Leadership – DB Trends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thought Leadership – DC Trends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thought Leadership – ESG Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thought Leadership – Macro Market Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thought Leadership – Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Additional_Location__c</fullName>
        <label>Location</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Category__c</fullName>
        <description>Field to categorize phone calls as inbound or outbound</description>
        <label>Call Direction</label>
        <picklist>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Note_Parent_Task_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Call Note Parent Task Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_Outcome__c</fullName>
        <description>Field to be able to track call out come (No Answer, Left Voicemail, Live phone call)</description>
        <label>Call Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Conversation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Called_Time__c</fullName>
        <label>Called Time</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:30 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:30 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:30 PM</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Engagement__c</fullName>
        <label>Client Engagement</label>
        <picklist>
            <picklistValues>
                <fullName>DC Trends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ESG Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Macro Market Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Overview/Business Update</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operational Due Diligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship Building Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Analyst Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Management Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thought Leadership</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Competitive_Analysis_Request__c</fullName>
        <formula>HYPERLINK(&quot;http://www.google.com&quot;,&quot;Google&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Competitive Analysis Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <label>Event End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <label>Event Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalAttendees__c</fullName>
        <label>ExternalAttendees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_up_Type__c</fullName>
        <label>Follow up Type</label>
        <picklist>
            <picklistValues>
                <fullName>Follow Up - DCI Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up - Money In Motion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up - Competitive Analysis Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Follow up Meeting/Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Add to Campaign</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Government_Entity__c</fullName>
        <label>Government Entity?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Inbound_Follow_Up_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is an identified to check whether inbound follow up created from Log a Call(Retail)</description>
        <label>Inbound Follow Up Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalAttendees__c</fullName>
        <label>InternalAttendees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Type__c</fullName>
        <label>Internal Type</label>
        <picklist>
            <picklistValues>
                <fullName>In Office Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Internal Meeting/Training</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Modified_within_6_months__c</fullName>
        <formula>IF( DATEVALUE(LastModifiedDate) + 180 &gt; TODAY() , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Modified within 6 months?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Overdue__c</fullName>
        <formula>IF( AND(ActivityDate &lt; TODAY(), NOT(ISPICKVAL(Status, &apos;Completed&apos;)) ), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Overdue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Points_and_Directions_for_Speakers__c</fullName>
        <label>Key Points and Directions for Speakers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Offsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Office</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MFS_Attendees__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MFS Attendees</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Contact should be MFS employee</errorMessage>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Retail, Consultant - Verified, Institutional - Verified, Retail - Verified, Consultant, Institutional</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Materials_Request__c</fullName>
        <formula>HYPERLINK(&quot;http://www.google.com&quot;, &quot;Google&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Materials Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meeting_Background__c</fullName>
        <label>Meeting Background</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <picklist>
            <picklistValues>
                <fullName>In Person Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Video Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customized Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Meeting</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Activity_Detail_Id__c</fullName>
        <label>Parent Activity Detail Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question_Likely_Asked__c</fullName>
        <label>Question Likely Asked</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_Call__c</fullName>
        <label>Reason for Call</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced MStar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Analysis Follow Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DCI Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up-Advanced MStar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up-Hypo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up-Product Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up-Wholesaler Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hypo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MFS Story</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Add</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wholesaler follow-up</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reminder_Start_Date__c</fullName>
        <description>This is used in slds page</description>
        <label>Reminder Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <picklist>
            <picklistValues>
                <fullName>Voicemail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Live Conversation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Scheduled</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Saleslogix_ID__c</fullName>
        <externalId>true</externalId>
        <label>Saleslogix ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Significant_Anticipated_Questions__c</fullName>
        <label>Significant Anticipated Questions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Speaker_Request__c</fullName>
        <formula>HYPERLINK(&quot;http://www.google.com&quot;,&quot;Google&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Speaker Request</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FULL_NAME</field>
            <operation>equals</operation>
            <value>Tom&apos;s Team</value>
        </filters>
        <label>My Team&apos;s Activities</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>